startet with own stuff

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="style.css">
+    <script src="models/drawable-object.class.js"></script>
     <script src="models/moveable-object.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/chicken.class.js"></script>
     <script src="models/cloud.class.js"></script>
+    <script src="models/status-bar.class.js"></script>
+    <script src="models/throwableObject.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
@@ -21,6 +24,9 @@
 
 <body onload="init()">
     <h1>El Pollo Loco</h1>
+    <div class="startGameScreen">
+        <button id="startGameButton" onclick="startGame()">Start Game</button>
+    </div>
     <canvas id="canvas" width="720" height="480"></canvas>
 </body>
 
