--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="models/drawable-object.class.js"></script>
     <script src="models/moveable-object.class.js"></script>
+    <script src="models/throwableObject.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/chicken.class.js"></script>
     <script src="models/cloud.class.js"></script>
-    <script src="models/status-bar.class.js"></script>
-    <script src="models/throwableObject.class.js"></script>
+    <script src="models/health-status-bar.class.js"></script>
+    <script src="models/coin-status-bar.class.js"></script>
+    <script src="models/bottle-status-bar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
@@ -24,10 +26,30 @@
 
 <body onload="init()">
     <h1>El Pollo Loco</h1>
-    <div class="startGameScreen">
-        <button id="startGameButton" onclick="startGame()">Start Game</button>
+    <div id="startGame" class="startGameScreen">
+        <button onclick="startGame()">
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" fill="#FFD300"
+                stroke="#823113" stroke-width="2" filter="url(#drop-shadow)">
+                <defs>
+                    <filter id="drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
+                        <feOffset result="offOut" in="SourceAlpha" dx="3" dy="3" />
+                        <feGaussianBlur result="blurOut" in="offOut" stdDeviation="3" />
+                        <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+                    </filter>
+                </defs>
+                <polygon points="25,20 80,50 25,80" />
+            </svg>
+
+
+        </button>
+        <img src="./img/9_intro_outro_screens/start/startscreen_1.png">
     </div>
-    <canvas id="canvas" width="720" height="480"></canvas>
+    <div class="canvas">
+        <canvas id="canvas" width="720" height="480"></canvas>
+    </div>
+    <button onclick="fullscreen()">Fullscreen</button>
+
 </body>
 
 </html>
