--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Pollo Loco</title>
+    <link rel="icon" type="image/png" href="img/8_coin/coin_2.png">
     <link rel="stylesheet" href="style.css">
     <script src="models/drawable-object.class.js"></script>
     <script src="models/moveable-object.class.js"></script>
     <script src="models/throwableObject.class.js"></script>
     <script src="models/character.class.js"></script>
+    <script src="models/coin.class.js"></script>
+    <script src="models/bottle.class.js"></script>
     <script src="models/chicken.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/health-status-bar.class.js"></script>
@@ -48,7 +51,7 @@
     <div class="canvas">
         <canvas id="canvas" width="720" height="480"></canvas>
     </div>
-    <button onclick="fullscreen()">Fullscreen</button>
+    <button class="fullscreenButton" onclick="fullscreen()">Fullscreen</button>
 
 </body>
 
