--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="models/health-status-bar.class.js"></script>
     <script src="models/coin-status-bar.class.js"></script>
     <script src="models/bottle-status-bar.class.js"></script>
+    <script src="models/endboss-status-bar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
@@ -30,7 +31,7 @@
 <body onload="init()">
     <h1>El Pollo Loco</h1>
     <div id="startGame" class="startGameScreen">
-        <button onclick="startGame()">
+        <button onclick="initlevel(), startGame()">
 
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" fill="#FFD300"
                 stroke="#823113" stroke-width="2" filter="url(#drop-shadow)">
@@ -44,9 +45,16 @@
                 <polygon points="25,20 80,50 25,80" />
             </svg>
 
-
         </button>
         <img src="./img/9_intro_outro_screens/start/startscreen_1.png">
+    </div>
+    <div class="gameOver d-none" id="gameOver">
+        <button onclick="initlevel(), startGame()">Try Again</button>
+        <img src="img/9_intro_outro_screens/game_over/oh no you lost!.png">
+    </div>
+    <div class="win d-none" id="win">
+        <button onclick="initlevel(), startGame()">Play Again</button>
+        <img src="img/9_intro_outro_screens/game_over/game over!.png">
     </div>
     <div class="canvas">
         <canvas id="canvas" width="720" height="480"></canvas>
