--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="models/drawable-object.class.js"></script>
     <script src="models/moveable-object.class.js"></script>
-    <script src="models/throwableObject.class.js"></script>
+    <script src="models/thrownBottle.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/coin.class.js"></script>
     <script src="models/bottle.class.js"></script>
     <script src="models/chicken.class.js"></script>
+    <script src="models/endboss.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/health-status-bar.class.js"></script>
     <script src="models/coin-status-bar.class.js"></script>
@@ -23,7 +24,6 @@
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
-    <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
 </head>
