--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Pollo Loco</title>
-    <link rel="icon" type="image/png" href="img/8_coin/coin_2.png">
+    <link rel="icon" type="image/png" href="img/3_enemies_chicken/chicken_small/1_walk/1_w.png">
     <link rel="stylesheet" href="style.css">
     <script src="models/drawable-object.class.js"></script>
     <script src="models/moveable-object.class.js"></script>
@@ -30,36 +30,187 @@
 
 <body onload="init()">
     <h1>El Pollo Loco</h1>
-    <div id="startGame" class="startGameScreen">
-        <button onclick="initlevel(), startGame()">
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" fill="#FFD300"
-                stroke="#823113" stroke-width="2" filter="url(#drop-shadow)">
-                <defs>
-                    <filter id="drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
-                        <feOffset result="offOut" in="SourceAlpha" dx="3" dy="3" />
-                        <feGaussianBlur result="blurOut" in="offOut" stdDeviation="3" />
-                        <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
-                    </filter>
-                </defs>
-                <polygon points="25,20 80,50 25,80" />
-            </svg>
+    <div id="content" class="content">
+        <div class="contentCanvas">
 
-        </button>
-        <img src="./img/9_intro_outro_screens/start/startscreen_1.png">
+            <canvas id="canvas" width="720" height="480"></canvas>
+            <img id="startIMG" src="./img/9_intro_outro_screens/start/startscreen_1.png">
+
+            <div class="header">
+                <!-- start button -->
+                <button id="startButton" class="startButton" onclick="initlevel(), startGame()">
+                    Start Game
+                </button>
+
+                <!-- mute Button -->
+                <div class="d-none">
+                    <button>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M8 2.81v10.38c0 .67-.81 1-1.28.53L3 10H1c-.55 0-1-.45-1-1V7c0-.55.45-1 1-1h2l3.72-3.72C7.19 1.81 8 2.14 8 2.81zm7.53 3.22l-1.06-1.06-1.97 1.97-1.97-1.97-1.06 1.06L11.44 8 9.47 9.97l1.06 1.06 1.97-1.97 1.97 1.97 1.06-1.06L13.56 8l1.97-1.97z" />
+                        </svg>
+                    </button>
+                </div>
+                <!-- unmute Button -->
+                <div>
+                    <button>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M12 8.02c0 1.09-.45 2.09-1.17 2.83l-.67-.67c.55-.56.89-1.31.89-2.16 0-.85-.34-1.61-.89-2.16l.67-.67A3.99 3.99 0 0 1 12 8.02zM7.72 2.28L4 6H2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2l3.72 3.72c.47.47 1.28.14 1.28-.53V2.81c0-.67-.81-1-1.28-.53zm5.94.08l-.67.67a6.996 6.996 0 0 1 2.06 4.98c0 1.94-.78 3.7-2.06 4.98l.67.67A7.973 7.973 0 0 0 16 8c0-2.22-.89-4.22-2.34-5.66v.02zm-1.41 1.41l-.69.67a5.05 5.05 0 0 1 1.48 3.58c0 1.39-.56 2.66-1.48 3.56l.69.67A5.97 5.97 0 0 0 14 8.02c0-1.65-.67-3.16-1.75-4.25z" />
+                        </svg>
+                    </button>
+                </div>
+                <!-- controller -->
+                <div>
+                    <button>
+                        <svg class="controlls" fill="#000000" height="40" width="40" version="1.1" id="Capa_1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            viewBox="0 0 59 59" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <path
+                                        d="M44.246,27.028H31v-11.5c0-1.93,1.57-3.5,3.5-3.5s3.5,1.57,3.5,3.5v3.5c0,2.757,2.243,5,5,5s5-2.243,5-5v-16
+                           c0-0.553-0.448-1-1-1s-1,0.447-1,1v16c0,1.654-1.346,3-3,3s-3-1.346-3-3v-3.5c0-3.032-2.467-5.5-5.5-5.5s-5.5,2.468-5.5,5.5v11.5
+                           H14.972C6.716,27.028,0,33.743,0,42c0,7.149,5.209,14.872,12.963,14.972c0.069,0.001,0.14,0.001,0.213,0.001
+                           c2.072,0,5.679-0.354,9.378-1.367c4.359-1.194,9.764-1.195,14.107-0.001c3.952,1.087,8.169,1.381,9.596,1.367l0,0
+                           C52.386,56.867,59,51.112,59,42C59,33.743,52.381,27.028,44.246,27.028z M46.225,54.971c-1.278,0.021-5.327-0.276-9.033-1.295
+                           c-4.669-1.285-10.481-1.284-15.166-0.001c-3.629,0.994-7.12,1.317-9.038,1.296C7.682,54.903,2,49.674,2,42
+                           c0-7.152,5.819-12.972,12.972-12.972h29.274C51.278,29.028,57,34.847,57,42C57,48.174,52.67,54.861,46.225,54.971z" />
+                                    <path d="M33.631,32.028c0-0.553-0.448-1-1-1H28c-0.552,0-1,0.447-1,1c0,0.553,0.448,1,1,1h4.631
+                           C33.184,33.028,33.631,32.581,33.631,32.028z" />
+                                    <path d="M37,38.028c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4S39.206,38.028,37,38.028z M37,44.028c-1.103,0-2-0.897-2-2
+                           s0.897-2,2-2s2,0.897,2,2S38.103,44.028,37,44.028z" />
+                                    <path d="M51,38.028c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4S53.206,38.028,51,38.028z M51,44.028c-1.103,0-2-0.897-2-2
+                           s0.897-2,2-2s2,0.897,2,2S52.103,44.028,51,44.028z" />
+                                    <path d="M44,45.028c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4S46.206,45.028,44,45.028z M44,51.028c-1.103,0-2-0.897-2-2
+                           s0.897-2,2-2s2,0.897,2,2S45.103,51.028,44,51.028z" />
+                                    <path d="M44,39.028c2.206,0,4-1.794,4-4s-1.794-4-4-4s-4,1.794-4,4S41.794,39.028,44,39.028z M44,33.028c1.103,0,2,0.897,2,2
+                           s-0.897,2-2,2s-2-0.897-2-2S42.897,33.028,44,33.028z" />
+                                    <path
+                                        d="M23,38.028h-3v-3c0-0.553-0.448-1-1-1h-6c-0.552,0-1,0.447-1,1v3H9c-0.552,0-1,0.447-1,1v6c0,0.553,0.448,1,1,1h3v3
+                           c0,0.553,0.448,1,1,1h6c0.552,0,1-0.447,1-1v-3h3c0.552,0,1-0.447,1-1v-6C24,38.474,23.552,38.028,23,38.028z M22,44.028h-3
+                           c-0.552,0-1,0.447-1,1v3h-4v-3c0-0.553-0.448-1-1-1h-3v-4h3c0.552,0,1-0.447,1-1v-3h4v3c0,0.553,0.448,1,1,1h3V44.028z" />
+                                </g>
+                            </g>
+                        </svg>
+                    </button>
+                </div>
+                <!-- fullscreen button -->
+                <div>
+                    <button class="fullscreenButton" onclick="fullscreen()">
+                        <svg fill="#000000" height="40px" width="40px" version="1.1" id="Layer_1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            viewBox="0 0 490.667 490.667" xml:space="preserve">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
+                                stroke="#CCCCCC" stroke-width="0.981334"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <g>
+                                    <g>
+                                        <g>
+                                            <path
+                                                d="M173.792,301.792L21.333,454.251v-80.917c0-5.891-4.776-10.667-10.667-10.667C4.776,362.667,0,367.442,0,373.333V480 c0,5.891,4.776,10.667,10.667,10.667h106.667c5.891,0,10.667-4.776,10.667-10.667s-4.776-10.667-10.667-10.667H36.416 l152.459-152.459c4.093-4.237,3.975-10.99-0.262-15.083C184.479,297.799,177.926,297.799,173.792,301.792z">
+                                            </path>
+                                            <path
+                                                d="M480,0H373.333c-5.891,0-10.667,4.776-10.667,10.667c0,5.891,4.776,10.667,10.667,10.667h80.917L301.792,173.792 c-4.237,4.093-4.354,10.845-0.262,15.083c4.093,4.237,10.845,4.354,15.083,0.262c0.089-0.086,0.176-0.173,0.262-0.262 L469.333,36.416v80.917c0,5.891,4.776,10.667,10.667,10.667s10.667-4.776,10.667-10.667V10.667C490.667,4.776,485.891,0,480,0z">
+                                            </path>
+                                            <path
+                                                d="M36.416,21.333h80.917c5.891,0,10.667-4.776,10.667-10.667C128,4.776,123.224,0,117.333,0H10.667 C4.776,0,0,4.776,0,10.667v106.667C0,123.224,4.776,128,10.667,128c5.891,0,10.667-4.776,10.667-10.667V36.416l152.459,152.459 c4.237,4.093,10.99,3.975,15.083-0.262c3.992-4.134,3.992-10.687,0-14.82L36.416,21.333z">
+                                            </path>
+                                            <path
+                                                d="M480,362.667c-5.891,0-10.667,4.776-10.667,10.667v80.917L316.875,301.792c-4.237-4.093-10.99-3.976-15.083,0.261 c-3.993,4.134-3.993,10.688,0,14.821l152.459,152.459h-80.917c-5.891,0-10.667,4.776-10.667,10.667s4.776,10.667,10.667,10.667 H480c5.891,0,10.667-4.776,10.667-10.667V373.333C490.667,367.442,485.891,362.667,480,362.667z">
+                                            </path>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <!-- game won screen -->
+            <div class="win d-none" id="win">
+                <img src="img/9_intro_outro_screens/game_over/game over!.png">
+                <button class="playAgain" onclick="initlevel(), startGame()">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                        viewBox="0,0,256,256">
+                        <g transform="">
+                            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="none" stroke-linecap="butt"
+                                stroke-linejoin="none" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <path transform="scale(5.12,5.12)"
+                                    d="M48,25c0,12.67888 -10.32112,23 -23,23c-12.67888,0 -23,-10.32112 -23,-23c0,-6.72768 2.9067,-12.79052 7.52539,-17h-4.52539c-0.72127,0.0102 -1.39216,-0.36875 -1.75578,-0.99175c-0.36361,-0.623 -0.36361,-1.39351 0,-2.01651c0.36361,-0.623 1.0345,-1.00195 1.75578,-0.99175h11v11c0.0102,0.72127 -0.36875,1.39216 -0.99175,1.75578c-0.623,0.36361 -1.39351,0.36361 -2.01651,0c-0.623,-0.36361 -1.00195,-1.0345 -0.99175,-1.75578v-3.85547c-3.69198,3.46357 -6,8.37967 -6,13.85547c0,10.51712 8.48288,19 19,19c10.51712,0 19,-8.48288 19,-19c0,-10.51712 -8.48288,-19 -19,-19c-0.72127,0.0102 -1.39216,-0.36875 -1.75578,-0.99175c-0.36361,-0.623 -0.36361,-1.39351 0,-2.01651c0.36361,-0.623 1.0345,-1.00195 1.75578,-0.99175c12.67888,0 23,10.32112 23,23z"
+                                    id="strokeMainSVG" fill="#9f3b18" stroke="#9f3b18" stroke-width="4"
+                                    stroke-linejoin="round">
+                                </path>
+                                <g transform="scale(5.12,5.12)" fill="#ffc422" stroke="none" stroke-width="1"
+                                    stroke-linejoin="miter">
+                                    <path
+                                        d="M25,2c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175c10.51712,0 19,8.48288 19,19c0,10.51712 -8.48288,19 -19,19c-10.51712,0 -19,-8.48288 -19,-19c0,-5.4758 2.30802,-10.39189 6,-13.85547v3.85547c-0.0102,0.72127 0.36875,1.39216 0.99175,1.75578c0.623,0.36361 1.39351,0.36361 2.01651,0c0.623,-0.36361 1.00195,-1.0345 0.99175,-1.75578v-11h-11c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h4.52539c-4.61869,4.20948 -7.52539,10.27232 -7.52539,17c0,12.67888 10.32112,23 23,23c12.67888,0 23,-10.32112 23,-23c0,-12.67888 -10.32112,-23 -23,-23z">
+                                    </path>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                </button>
+            </div>
+            <!-- game lost -->
+            <div class="gameOver d-none" id="gameOver">
+                <button class="playAgain" onclick="initlevel(), startGame()">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                        viewBox="0,0,256,256">
+                        <g transform="">
+                            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="none" stroke-linecap="butt"
+                                stroke-linejoin="none" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <path transform="scale(5.12,5.12)"
+                                    d="M48,25c0,12.67888 -10.32112,23 -23,23c-12.67888,0 -23,-10.32112 -23,-23c0,-6.72768 2.9067,-12.79052 7.52539,-17h-4.52539c-0.72127,0.0102 -1.39216,-0.36875 -1.75578,-0.99175c-0.36361,-0.623 -0.36361,-1.39351 0,-2.01651c0.36361,-0.623 1.0345,-1.00195 1.75578,-0.99175h11v11c0.0102,0.72127 -0.36875,1.39216 -0.99175,1.75578c-0.623,0.36361 -1.39351,0.36361 -2.01651,0c-0.623,-0.36361 -1.00195,-1.0345 -0.99175,-1.75578v-3.85547c-3.69198,3.46357 -6,8.37967 -6,13.85547c0,10.51712 8.48288,19 19,19c10.51712,0 19,-8.48288 19,-19c0,-10.51712 -8.48288,-19 -19,-19c-0.72127,0.0102 -1.39216,-0.36875 -1.75578,-0.99175c-0.36361,-0.623 -0.36361,-1.39351 0,-2.01651c0.36361,-0.623 1.0345,-1.00195 1.75578,-0.99175c12.67888,0 23,10.32112 23,23z"
+                                    id="strokeMainSVG" fill="#9f3b18" stroke="#9f3b18" stroke-width="4"
+                                    stroke-linejoin="round">
+                                </path>
+                                <g transform="scale(5.12,5.12)" fill="#ffc422" stroke="none" stroke-width="1"
+                                    stroke-linejoin="miter">
+                                    <path
+                                        d="M25,2c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175c10.51712,0 19,8.48288 19,19c0,10.51712 -8.48288,19 -19,19c-10.51712,0 -19,-8.48288 -19,-19c0,-5.4758 2.30802,-10.39189 6,-13.85547v3.85547c-0.0102,0.72127 0.36875,1.39216 0.99175,1.75578c0.623,0.36361 1.39351,0.36361 2.01651,0c0.623,-0.36361 1.00195,-1.0345 0.99175,-1.75578v-11h-11c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h4.52539c-4.61869,4.20948 -7.52539,10.27232 -7.52539,17c0,12.67888 10.32112,23 23,23c12.67888,0 23,-10.32112 23,-23c0,-12.67888 -10.32112,-23 -23,-23z">
+                                    </path>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                </button>
+                <img src="img/9_intro_outro_screens/game_over/oh no you lost!.png">
+            </div>
+        </div>
     </div>
-    <div class="gameOver d-none" id="gameOver">
-        <button onclick="initlevel(), startGame()">Try Again</button>
-        <img src="img/9_intro_outro_screens/game_over/oh no you lost!.png">
+
+
+    <div id="mainContent">
+
+
+
+        <div id="startGame" class="startGameScreen">
+
+
+
+            <div class="startGameScreenButtons">
+
+
+                <div id="gamOver">
+
+                </div>
+            </div>
+
+        </div>
     </div>
-    <div class="win d-none" id="win">
-        <button onclick="initlevel(), startGame()">Play Again</button>
-        <img src="img/9_intro_outro_screens/game_over/game over!.png">
-    </div>
-    <div class="canvas">
-        <canvas id="canvas" width="720" height="480"></canvas>
-    </div>
-    <button class="fullscreenButton" onclick="fullscreen()">Fullscreen</button>
+
+
+
+
+
+
 
 </body>
 
