--- a/index.html
+++ b/index.html
@@ -103,36 +103,72 @@
                         </button>
                     </div>
                     <!-- fullscreen button -->
-                    <div>
+                    <div id="fullscreen">
                         <button class="fullscreenButton hover" onclick="fullscreen()">
-                            <svg fill="#000000" height="40px" width="40px" version="1.1" id="Layer_1"
-                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                viewBox="0 0 490.667 490.667" xml:space="preserve">
+                            <svg height="40" width="40" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
+                                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                                 <g>
                                     <g>
-                                        <g>
-                                            <path
-                                                d="M173.792,301.792L21.333,454.251v-80.917c0-5.891-4.776-10.667-10.667-10.667C4.776,362.667,0,367.442,0,373.333V480
-                                       c0,5.891,4.776,10.667,10.667,10.667h106.667c5.891,0,10.667-4.776,10.667-10.667s-4.776-10.667-10.667-10.667H36.416
-                                       l152.459-152.459c4.093-4.237,3.975-10.99-0.262-15.083C184.479,297.799,177.926,297.799,173.792,301.792z" />
-                                            <path
-                                                d="M480,0H373.333c-5.891,0-10.667,4.776-10.667,10.667c0,5.891,4.776,10.667,10.667,10.667h80.917L301.792,173.792
-                                       c-4.237,4.093-4.354,10.845-0.262,15.083c4.093,4.237,10.845,4.354,15.083,0.262c0.089-0.086,0.176-0.173,0.262-0.262
-                                       L469.333,36.416v80.917c0,5.891,4.776,10.667,10.667,10.667s10.667-4.776,10.667-10.667V10.667C490.667,4.776,485.891,0,480,0z" />
-                                            <path
-                                                d="M36.416,21.333h80.917c5.891,0,10.667-4.776,10.667-10.667C128,4.776,123.224,0,117.333,0H10.667
-                                       C4.776,0,0,4.776,0,10.667v106.667C0,123.224,4.776,128,10.667,128c5.891,0,10.667-4.776,10.667-10.667V36.416l152.459,152.459
-                                       c4.237,4.093,10.99,3.975,15.083-0.262c3.992-4.134,3.992-10.687,0-14.82L36.416,21.333z" />
-                                            <path
-                                                d="M480,362.667c-5.891,0-10.667,4.776-10.667,10.667v80.917L316.875,301.792c-4.237-4.093-10.99-3.976-15.083,0.261
-                                       c-3.993,4.134-3.993,10.688,0,14.821l152.459,152.459h-80.917c-5.891,0-10.667,4.776-10.667,10.667s4.776,10.667,10.667,10.667
-                                       H480c5.891,0,10.667-4.776,10.667-10.667V373.333C490.667,367.442,485.891,362.667,480,362.667z" />
-                                        </g>
+                                        <path
+                                            d="M151.414,0H72.975C32.737,0,0,32.737,0,72.975v78.439c0,11.422,9.26,20.682,20.682,20.682    c11.422,0,20.682-9.26,20.682-20.682V72.975c0-17.43,14.181-31.611,31.611-31.611h78.439c11.422,0,20.682-9.26,20.682-20.682    C172.096,9.26,162.836,0,151.414,0z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M439.025,0h-78.44c-11.422,0-20.682,9.26-20.682,20.682c0,11.422,9.259,20.682,20.682,20.682h78.44    c17.43,0,31.611,14.181,31.611,31.611v78.439c0,11.422,9.259,20.682,20.682,20.682c11.423,0,20.682-9.26,20.682-20.682V72.975    C512,32.737,479.264,0,439.025,0z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M491.318,339.903c-11.423,0-20.682,9.259-20.682,20.682v78.44c0,17.43-14.181,31.611-31.611,31.611h-78.44    c-11.423,0-20.682,9.259-20.682,20.682c0,11.423,9.259,20.682,20.682,20.682h78.44C479.264,512,512,479.264,512,439.025v-78.44    C512,349.162,502.741,339.903,491.318,339.903z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M151.414,470.636H72.975c-17.43,0-31.611-14.181-31.611-31.611v-78.44c0-11.423-9.26-20.682-20.682-20.682    C9.26,339.903,0,349.162,0,360.585v78.44C0,479.264,32.737,512,72.975,512h78.439c11.422,0,20.682-9.259,20.682-20.682    C172.096,479.895,162.836,470.636,151.414,470.636z" />
                                     </g>
                                 </g>
                             </svg>
                         </button>
                     </div>
+                    <!-- minimize button -->
+                    <div id="minimize">
+                        <button class="fullscreenButton hover" onclick="exitfullscreen()">
+                            <svg height="40" width="40" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
+                                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M151.414,0c-11.422,0-20.682,9.26-20.682,20.682v78.439c0,17.43-14.181,31.611-31.611,31.611H20.682    C9.26,130.732,0,139.992,0,151.414s9.26,20.682,20.682,20.682h78.439c40.238,0,72.975-32.737,72.975-72.975V20.682    C172.096,9.26,162.836,0,151.414,0z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M491.318,130.732h-78.439c-17.431,0-31.612-14.181-31.612-31.611V20.682C381.267,9.26,372.008,0,360.585,0    s-20.682,9.26-20.682,20.682v78.439c0,40.238,32.738,72.975,72.976,72.975h78.439c11.423,0,20.682-9.26,20.682-20.682    S502.741,130.732,491.318,130.732z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M491.318,339.903h-78.439c-40.239,0-72.976,32.738-72.976,72.976v78.439c0,11.423,9.259,20.682,20.682,20.682    s20.682-9.259,20.682-20.682v-78.439c0-17.431,14.181-31.612,31.612-31.612h78.439c11.423,0,20.682-9.259,20.682-20.682    S502.741,339.903,491.318,339.903z" />
+                                    </g>
+                                </g>
+                                <g>
+                                    <g>
+                                        <path
+                                            d="M99.121,339.903H20.682C9.26,339.903,0,349.162,0,360.585s9.26,20.682,20.682,20.682h78.439    c17.43,0,31.611,14.181,31.611,31.612v78.439c0,11.423,9.26,20.682,20.682,20.682s20.682-9.259,20.682-20.682v-78.439    C172.096,372.639,139.36,339.903,99.121,339.903z" />
+                                    </g>
+                                </g>
+                            </svg>
+                        </button>
+                    </div>
+
                 </div>
             </div>
             <!-- game won screen -->
