--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>El Pollo Loco</title>
     <link rel="icon" type="image/png" href="img/3_enemies_chicken/chicken_small/1_walk/1_w.png">
     <link rel="stylesheet" href="style.css">
+    <script src="models/valiables.class.js"></script>
     <script src="models/drawable-object.class.js"></script>
     <script src="models/moveable-object.class.js"></script>
     <script src="models/thrownBottle.class.js"></script>
