--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <script src="models/coin-status-bar.class.js"></script>
     <script src="models/bottle-status-bar.class.js"></script>
     <script src="models/endboss-status-bar.class.js"></script>
-    <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="levels/level1.js"></script>
+    <script src="models/world.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 
@@ -169,7 +169,18 @@
                             </svg>
                         </button>
                     </div>
+                </div>
+            </div>
 
+            <!-- Mobile controlls -->
+            <div class="contentCanvas MobileControlls">
+                <div class="mobileButtons">
+                    <button onclick="test()">JUMP</button>
+                    <button>Throw</button>
+                </div>
+                <div class="mobileButtons">
+                    <button>Left</button>
+                    <button>Right</button>
                 </div>
             </div>
             <!-- game won screen -->
