--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
             <!-- Mobile controlls -->
             <div class="contentCanvas MobileControlls">
                 <div class="mobileButtons">
-                    <button onclick="test()">JUMP</button>
-                    <button>Throw</button>
+                    <button id="btnJump" onclick="test()">JUMP</button>
+                    <button id="btnThrow">Throw</button>
                 </div>
                 <div class="mobileButtons">
-                    <button>Left</button>
-                    <button>Right</button>
+                    <button id="btnLeft">Left</button>
+                    <button id="btnRight">Right</button>
                 </div>
             </div>
             <!-- game won screen -->
