--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="models/coin.class.js"></script>
     <script src="models/bottle.class.js"></script>
     <script src="models/chicken.class.js"></script>
+    <script src="models/mini-chicken.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/health-status-bar.class.js"></script>
@@ -34,7 +35,9 @@
     <audio id="characterSleepingSound" src="audio/sleeping.mp3"></audio>
 
     <h1>El Pollo Loco</h1>
-    <h2>Rotate the device for a better experience</h2>
+    <div class="rotateDevice">
+        <h2>Rotate the device for a better experience</h2>
+    </div>
 
     <div id="content" class="content">
         <div id="contentCanvas" class="contentCanvas">
